--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *.sql linguist-detectable=true
 *.sql linguist-language=SQL
+*.sh  linguist-vendored
+*.md  linguist-documentation
+*.json linguist-vendored
